무한 스크롤 작동은 됨

--- a/src/main/resources/static/css/funding/funding-list.css
+++ b/src/main/resources/static/css/funding/funding-list.css
@@ -296,9 +296,9 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
     -webkit-box-sizing: inherit;
     box-sizing: inherit;
 }
-.imgStyleBox .image-wrapper a {
-    background: url("https://tumblbug-pci.imgix.net/11ea5b920c65d5f3d65d29a1b1583cd2e03f16e6/007b6da4e73604f590568620636df9f45c1c385b/99ad89d91fbd1abe533280381a952c13901f41bf/4e17000d-8d19-4c6c-97a9-8772101c7f60.png?auto=format%2Ccompress&fit=crop&h=288&lossless=true&w=384&s=ccaf0c29a4a9c34a703c08e3ddef88d1") center center / cover no-repeat;
-}
+/*.imgStyleBox .image-wrapper a {*/
+/*    background: url("https://tumblbug-pci.imgix.net/11ea5b920c65d5f3d65d29a1b1583cd2e03f16e6/007b6da4e73604f590568620636df9f45c1c385b/99ad89d91fbd1abe533280381a952c13901f41bf/4e17000d-8d19-4c6c-97a9-8772101c7f60.png?auto=format%2Ccompress&fit=crop&h=288&lossless=true&w=384&s=ccaf0c29a4a9c34a703c08e3ddef88d1") center center / cover no-repeat;*/
+/*}*/
 .project-card .image-wrapper a {
     display: block;
     width: 100%;
