내 문의사항 작업중

--- a/src/main/resources/templates/mypage/my-question.html
+++ b/src/main/resources/templates/mypage/my-question.html
@@ -97,7 +97,7 @@
         <div class="content-wrap">
             <div class="support-request-wrap">
                 <div class="support-request-inner-wrap">
-                    <div>
+                    <!--<div>
                         <div class="support-request-one-wrap">
                             <div class="support-request">
                                 <div class="support-request-place">
@@ -132,7 +132,7 @@
                             <div class="support-request-content">반 페르시 부합해 루시퍼 베드신 발포해 리스폰 페스시아 완패를 지켜</div>
                             <div class="support-request-reply">공양미 100석 후원</div>
                         </div>
-                    </div>
+                    </div>-->
                     <!--<div>
                         <div class="support-request-one-wrap">
                             <div class="support-request">
@@ -246,7 +246,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <form action="" class="change-modal-form-wrapper">
+                        <form action="/mypage/my-question-update" method="post" class="change-modal-form-wrapper" name="updateForm">
                             <div class="change-modal-form-row">
                                 <span class="change-modal-form-label">제목</span>
                                 <div class="change-modal-form-field">
@@ -269,7 +269,7 @@
                             </div>
                         </form>
                         <div class="change-modal-actions-row">
-                            <button type="submit" class="change-modal-ok-btn">
+                            <button type="button" class="change-modal-ok-btn">
                                 <span class="change-modal-btn">수정</span>
                             </button>
                             <button type="button" class="change-modal-delete-btn">
