펀딩 목록 조회 거의완료

--- a/src/main/resources/templates/funding/funding-list.html
+++ b/src/main/resources/templates/funding/funding-list.html
@@ -31,7 +31,7 @@
                 <div class="contain-gc infinityContain listContain">
                     <div class="resultWrapper">
                         <div class="resultContain">
-                            <span class="count">695</span>개의 프로젝트가 있습니다.
+                            <span class="count" th:text="*{count}">695</span>개의 프로젝트가 있습니다.
                         </div>
                         <div class="listWrapper">
                             <!-- 목록 -->
