--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -505,6 +505,7 @@
     // })
 
 </script>
+<script src="/js/admin/ajax.js"></script>
 <script src="/js/admin/volunteer.js"></script>
 <script src="/js/admin/app.js"></script>
 <script src="/js/admin/events.js"></script>
