--- a/src/main/resources/templates/admin/funding.html
+++ b/src/main/resources/templates/admin/funding.html
@@ -457,6 +457,7 @@
     // })
 
 </script>
+<script src="/js/admin/ajax.js"></script>
 <script src="/js/admin/funding.js"></script>
 <script src="/js/admin/app.js"></script>
 <script src="/js/admin/events.js"></script>
